--- a/models/staging/public/src_data_slido.yml
+++ b/models/staging/public/src_data_slido.yml
@@ -2,13 +2,14 @@ version: 2
 
 sources:
     - name: data_slido
+      description: some data from slido
       database: postgres
       schema: public
       tables:
         - name: data_slido 
           columns:
             - name: domains
-              description: domain names
+              description: domain info from mail
               tests:
                  - unique
                  - not_null
